--- a/app/views/common/_meta_tags.html.erb
+++ b/app/views/common/_meta_tags.html.erb
@@ -1,2 +1,3 @@
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
