--- a/public/stylesheets/bootstrapped/_common.scss
+++ b/public/stylesheets/bootstrapped/_common.scss
@@ -1,33 +1,28 @@
-/* 
-$dcBrandBlue:      rgb(90, 118, 160);
-$dcBrandBlueLight: rgb(119, 147, 189);
- */
-
 /*--------------------------------- layout -----------------------------------*/
 
-.bootstrapped {
+& {
   font-size: 15px;
 }
 
-.bootstrapped body {
+body {
   background: white url(/images/embed/home/stripes.png) 0 0 repeat;
   font-weight: 300;
   font-family: 'Gotham SSm A', 'Gotham SSm B', 'Gotham A', 'Gotham B', Gotham, 'Proxima Nova', 'Avenir Next', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-.bootstrapped main {
+main {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
 /*--------------------------------- navbar -----------------------------------*/
 
-.bootstrapped .dc-navbar#page-header {
+.dc-navbar#page-header {
   border-radius: 0;
 }
 
-.bootstrapped .dc-navbar {
-  background-color: rgb(90, 118, 160);
+.dc-navbar {
+  background-color: $dcBrandBlue;
   color: white;
   font-weight: 700;
   text-transform: uppercase;
@@ -36,27 +31,27 @@ $dcBrandBlueLight: rgb(119, 147, 189);
    -webkit-font-smoothing: antialiased;
 }
 
-.bootstrapped .dc-navbar a {
+.dc-navbar a {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.bootstrapped .dc-navbar a.active {
+.dc-navbar a.active {
   color: white;
 }
 
-.bootstrapped .dc-navbar .nav-link {
+.dc-navbar .nav-link {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
 
-.bootstrapped .dc-navbar .nav-link:hover {
+.dc-navbar .nav-link:hover {
   background-color: rgba(255, 255, 255, 0.25);
 }
-.bootstrapped .dc-navbar .nav-link.dc-logo:hover {
+.dc-navbar .nav-link.dc-logo:hover {
   background-color: transparent;
 }
 
-.bootstrapped .dc-logo {
+.dc-logo {
   background: transparent url('/images/common/document_cloud_logo_white@2x.png') left center no-repeat;
   color: transparent !important;
   background-size: contain;
@@ -64,23 +59,23 @@ $dcBrandBlueLight: rgb(119, 147, 189);
 
 /*-------------------------------- elements ----------------------------------*/
 
-.bootstrapped .paper {
+.paper {
   background-color: white;
   padding: 2rem;
   box-shadow: 0 0 1rem #aaa;
   border-radius: 0.5rem;
 }
 
-.bootstrapped .paper   > *:first-child,
-.bootstrapped .sidebar > *:first-child {
+.paper   > *:first-child,
+.sidebar > *:first-child {
   margin-top: 0;
 }
-.bootstrapped .paper   > *:last-child,
-.bootstrapped .sidebar > *:last-child {
+.paper   > *:last-child,
+.sidebar > *:last-child {
   margin-bottom: 0;
 }
 
-.bootstrapped .sidebar {
+.sidebar {
   padding-top:    2rem;
   padding-bottom: 2rem;
 }
