--- a/public/stylesheets/bootstrapped/_buttons.scss
+++ b/public/stylesheets/bootstrapped/_buttons.scss
@@ -1,24 +1,24 @@
 /*----------------------------------- buttons --------------------------------*/
 
 .btn {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid transparent;
   border-radius: 4px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: $font-weight-bold;
   font-size: 0.85rem;
-  -webkit-transition: background-color 100ms, border-color 100ms;
-          transition: background-color 100ms, border-color 100ms;
-}
-.btn:hover {
-  padding-bottom: calc(0.375rem - 2px);
-  border-bottom-width: 4px;
+  @include transition(background-color 100ms, border-color 100ms);
+
+  &:hover {
+    padding-bottom: calc(0.375rem - 2px);
+    border-bottom-width: 4px;
+  }
 }
 
 .btn-success {
-  border-bottom-color: green;
-  -moz-osx-font-smoothing: grayscale;
-   -webkit-font-smoothing: antialiased;
-}
-.btn-success:hover {
-  border-bottom-color: darkgreen;
+  border-bottom-color: darken($brand-success, 15%);
+  @include antialiased;
+
+  &:hover {
+    border-bottom-color: darken($brand-success, 25%);
+  }
 }
