--- a/public/stylesheets/bootstrapped/_variables.scss
+++ b/public/stylesheets/bootstrapped/_variables.scss
@@ -1,7 +1,19 @@
 // Our variables
 
-$dcBrandBlue:      rgb(90, 118, 160);
-$dcBrandBlueLight: rgb(119, 147, 189);
+$dc-brand-blue:           rgb(90, 118, 160);
+$dc-brand-blue-light:     rgb(119, 147, 189);
+$transition-speed-normal: 250ms;
+
+$font-weight-light:  300;
+$font-weight-normal: 400;
+$font-weight-bold:   700;
 
 // Bootstrap customization
 
+//$spacer:                     1rem;
+//$spacer-x:                   $spacer;
+//$spacer-y:                   $spacer;
+
+$link-color:                 $dc-brand-blue;
+$link-decoration:            underline;
+$link-hover-decoration:      none;
