Refer to CSS images through dev.dcloud.org for now
totally temp

--- a/public/stylesheets/bootstrapped/_common.scss
+++ b/public/stylesheets/bootstrapped/_common.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: white url(/images/embed/home/stripes.png) 0 0 repeat;
+  background: white url('//dev.dcloud.org/images/embed/home/stripes.png') 0 0 repeat;
   font-weight: $font-weight-light;
   font-family: 'Gotham SSm A', 'Gotham SSm B', 'Gotham A', 'Gotham B', Gotham, 'Proxima Nova', 'Avenir Next', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
