Don't require `html.bootstrap` namespacing

--- a/public/stylesheets/bootstrapped/primary.scss
+++ b/public/stylesheets/bootstrapped/primary.scss
@@ -19,10 +19,9 @@
 @import "mixins";
 @import "javascripts/vendor/bootstrap/scss/bootstrap";
 
-.bootstrapped {
-  @import "common";
-  @import "alerts";
-  @import "buttons";
-  @import "forms";
-}
 
+@import "mixins";
+@import "common";
+@import "alerts";
+@import "buttons";
+@import "forms";
