--- a/public/stylesheets/bootstrapped/_buttons.scss
+++ b/public/stylesheets/bootstrapped/_buttons.scss
@@ -2,14 +2,15 @@
 
 .btn {
   border-bottom: 2px solid transparent;
+  border-width:  2px;
   border-radius: 4px;
   text-transform: uppercase;
   font-weight: $font-weight-bold;
   font-size: 0.85rem;
-  @include transition(background-color 100ms, border-color 100ms);
+  @include transition(background-color 1000ms, border-color 1000ms, border-width 1000ms);
 
   &:hover {
-    padding-bottom: calc(0.375rem - 2px);
+    padding-bottom: calc(#{$btn-padding-y} - 2px);
     border-bottom-width: 4px;
   }
 }
