--- a/public/stylesheets/bootstrapped/_forms.scss
+++ b/public/stylesheets/bootstrapped/_forms.scss
@@ -1,131 +1,136 @@
 /*--------------------------------- forms ------------------------------------*/
 
-.form-group {
-  position: relative;
-  margin-top:    $spacer-y;
-  margin-bottom: $spacer-y;
+.form-fancy {
 
-  label {
-    display: inline-block;
-    position: absolute;
-    bottom: 100%;
-    width: 100%;
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-    overflow: hidden;
-    @include untouchable;
+  .form-group {
+    position: relative;
+    margin-top:    $spacer-y;
+    margin-bottom: $spacer-y;
 
-    -webkit-transform: translate3d(0, 2.2rem, 0);
-            transform: translate3d(0, 2.2rem, 0);
-    -webkit-transition: -webkit-transform $transition-speed-normal;
-            transition: transform $transition-speed-normal;
-    -webkit-transition-timing-function: ease-in-out;
-            transition-timing-function: ease-in-out;
+    label {
+      display: inline-block;
+      position: absolute;
+      bottom: 100%;
+      width: 100%;
+      padding-left: 0.75rem;
+      padding-right: 0.75rem;
+      overflow: hidden;
+      @include untouchable;
 
-    font-weight: $font-weight-light;
-    font-size: 0.9rem;
-    line-height: 1rem;
-    white-space: nowrap;
-
-    span[data-content] {
-      position: relative;
-      display: block;
-
-      line-height: 1rem;
-      @include antialiased;
-
-      -webkit-transition: -webkit-transform $transition-speed-normal, color $transition-speed-normal;
-              transition: transform $transition-speed-normal, color $transition-speed-normal;
+      -webkit-transform: translate3d(0, 2.2rem, 0);
+              transform: translate3d(0, 2.2rem, 0);
+      -webkit-transition: -webkit-transform $transition-speed-normal;
+              transition: transform $transition-speed-normal;
       -webkit-transition-timing-function: ease-in-out;
               transition-timing-function: ease-in-out;
 
-      &:after {
-        position: absolute;
-        bottom: 100%;
-        left: 0;
-        height: 100%;
-        width: 100%;
+      font-weight: $font-weight-light;
+      font-size: 0.9rem;
+      line-height: 1rem;
+      white-space: nowrap;
 
-        font-size: 0.8rem;
-        font-weight: $font-weight-bold;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        white-space: nowrap;
+      span[data-content] {
+        position: relative;
+        display: block;
 
-        content: attr(data-content);
+        line-height: 1rem;
+        @include antialiased;
+
+        -webkit-transition: -webkit-transform $transition-speed-normal, color $transition-speed-normal;
+                transition: transform $transition-speed-normal, color $transition-speed-normal;
+        -webkit-transition-timing-function: ease-in-out;
+                transition-timing-function: ease-in-out;
+
+        &:after {
+          position: absolute;
+          bottom: 100%;
+          left: 0;
+          height: 100%;
+          width: 100%;
+
+          font-size: 0.8rem;
+          font-weight: $font-weight-bold;
+          letter-spacing: 1px;
+          text-transform: uppercase;
+          white-space: nowrap;
+
+          content: attr(data-content);
+        }
       }
     }
-  }
 
-  &.has-danger {
-    label {
-      color: $brand-danger;
+    &.has-danger {
+      label {
+        color: $brand-danger;
+      }
     }
-  }
 
-  &.has-success {
-    label {
-      color: $brand-success;
+    &.has-success {
+      label {
+        color: $brand-success;
+      }
     }
+
   }
 
-}
-
-.form-group.filled label,
-.form-control:focus + label {
-	-webkit-transform: translate3d(0, 0.3rem, 0);
-	        transform: translate3d(0, 0.3rem, 0);
-}
-
-.form-group.filled label span[data-content],
-.form-control:focus + label span[data-content] {
-  -webkit-transform: translate3d(0, 100%, 0);
-          transform: translate3d(0, 100%, 0);
-}
-
-.form-group-alert {
-  font-weight: $font-weight-bold;
-  font-size: 0.9rem;
-
-  position: absolute;
-  top: 100%;
-  z-index: 1000;
-  max-height: 0;
-  overflow: hidden;
-  width: 100%;
-
-  -webkit-transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-out;
-          transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-out;
-
-  margin: -0.25rem 0 0 0;
-  padding: 0 0.75rem;
-  list-style-type: none;
-
-  border-bottom-left-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
-
-  > li {
-    margin: 0.5rem 0;
+  .form-group.filled label,
+  .form-control:focus + label {
+  	-webkit-transform: translate3d(0, 0.3rem, 0);
+  	        transform: translate3d(0, 0.3rem, 0);
   }
 
-  // These should work, but in testing they don't. TODO: Investigate
-//  .form-control:focus ~ & {
-//    max-height: 150px;
-//    -webkit-transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-in;
-//             transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-in;
-//  }
-//
-//  .has-danger & {
-//    @include white-on-($brand-danger);
-//  }
-}
+  .form-group.filled label span[data-content],
+  .form-control:focus + label span[data-content] {
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
+  }
 
-.form-control:focus ~ .form-group-alert {
-  max-height: 150px;
-	-webkit-transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-in;
-         	transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-in;
-}
+  .form-group-alert {
+    font-weight: $font-weight-bold;
+    font-size: 0.9rem;
 
-.has-danger .form-group-alert {
-  @include white-on-($brand-danger);
+    position: absolute;
+    top: 100%;
+    z-index: 1000;
+    max-height: 0;
+    overflow: hidden;
+    width: 100%;
+
+    -webkit-transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-out;
+            transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-out;
+
+    margin: -0.25rem 0 0 0;
+    padding: 0 0.75rem;
+    list-style-type: none;
+
+    border-bottom-left-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+
+    > li {
+      margin: 0.5rem 0;
+    }
+
+    // These should work, but in testing they don't. TODO: Investigate
+    //  .form-control:focus ~ & {
+    //    max-height: 150px;
+    //    -webkit-transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-in;
+    //             transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-in;
+    //  }
+    //
+    //  .has-danger & {
+    //    @include white-on-($brand-danger);
+    //  }
+
+  }
+
+  .form-control:focus ~ .form-group-alert {
+    max-height: 150px;
+  	-webkit-transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-in;
+           	transition: opacity $transition-speed-normal, max-height $transition-speed-normal ease-in;
+  }
+
+  .has-danger .form-group-alert {
+    @include white-on-($brand-danger);
+  }
+
 }
