--- a/public/stylesheets/bootstrapped/_variables_bootstrap.scss
+++ b/public/stylesheets/bootstrapped/_variables_bootstrap.scss
@@ -1,3 +1,6 @@
+$font-size-root: 15px;
+$font-family-sans-serif: 'Gotham SSm A', 'Gotham SSm B', 'Gotham A', 'Gotham B', Gotham, 'Proxima Nova', 'Avenir Next', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
 $nav-item-inline-spacer: 0.5rem;
 
 //$spacer:                     1rem;
