--- a/public/stylesheets/bootstrapped/_variables_bootstrap.scss
+++ b/public/stylesheets/bootstrapped/_variables_bootstrap.scss
@@ -10,3 +10,5 @@ $nav-item-inline-spacer: 0.5rem;
 $link-color:                 $dc-brand-blue;
 $link-decoration:            underline;
 $link-hover-decoration:      none;
+
+$input-padding-y: 0.85rem;
